# cinemascraper

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_chain.md
.github/workflows/: deploy.yml  scrape.yml
data/schedules/: _meta.json
data/schedules/109cinemas/: ゆめが丘_2026-03-03.json  ゆめが丘_2026-03-04.json  ゆめが丘_2026-03-05.json  ゆめが丘_2026-03-06.json  ゆめが丘_2026-03-07.json  ゆめが丘_2026-03-08.json  ゆめが丘_2026-03-09.json  ゆめが丘_2026-03-10.json  ゆめが丘_2026-03-11.json  ゆめが丘_2026-03-12.json  ゆめが丘_2026-03-13.json  ゆめが丘_2026-03-14.json  ゆめが丘_2026-03-15.json  ゆめが丘_2026-03-16.json  ゆめが丘_2026-03-17.json  ゆめが丘_2026-03-18.json  ゆめが丘_2026-03-19.json  ゆめが丘_2026-03-20.json  ゆめが丘_2026-03-21.json  ゆめが丘_2026-03-22.json  ゆめが丘_2026-03-23.json  ゆめが丘_2026-03-24.json  ゆめが丘_2026-03-25.json  ゆめが丘_2026-03-26.json  ゆめが丘_2026-03-27.json  ゆめが丘_2026-03-29.json  ゆめが丘_2026-03-30.json  ゆめが丘_2026-03-31.json  ゆめが丘_2026-04-01.json  ゆめが丘_2026-04-02.json  ゆめが丘_2026-04-04.json  ゆめが丘_2026-04-05.json  ゆめが丘_2026-04-06.json  ゆめが丘_2026-04-07.json  ゆめが丘_2026-04-08.json  ゆめが丘_2026-04-09.json  ゆめが丘_2026-04-11.json  ゆめが丘_2026-04-12.json  ゆめが丘_2026-04-13.json  (+1456 more)
scraper/: main.py  pyproject.toml
scraper/src/: config.py  main.py  models.py
scraper/src/scrapers/: base.py  cinema109.py  humax.py  tjoy.py  toho.py
scraper/src/utils/: browser.py
scraper/tests/: test_cinema109.py  test_models.py
scraper/tests/fixtures/: schedule_sample.html
web/: next.config.ts  package.json  pnpm-lock.yaml
(+9432 files in other folders)
