[project]
name = "cinesync-scraper"
version = "0.1.0"
description = "関東圏映画館スケジュールスクレイパー"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "pydantic>=2.10",
    "rich>=13.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
